# wasm-math

./: .gitignore  Cargo.toml  README.md  gulpfile.js  package.json  tsconfig.json  webpack.config.js
examples/: bootstrap.js  index.ts  node.ts
src/: _test.rs  lib.rs  main.rs  mat3.rs  mat4.rs  math.rs  node.rs  quat.rs  test.rs  vec2.rs  vec3.rs  vec4.rs
typings/: index.d.ts
