[package]
name = "wasm-math"
version = "0.1.0"
authors = ["liaodh <liaodh@jiguang.cn>"]
edition = "2018"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.33"
cfg-if = "0.1.6"
js-sys = "0.3.10"

[dependencies.web-sys]
version = "0.3.10"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[features]
default = ["web","debug"]
web = []
native = []
debug = []
